Fix homepage horizontal overflow and some shortcodes do support md (#9072)

--- a/assets/scss/_homepage.scss
+++ b/assets/scss/_homepage.scss
@@ -120,13 +120,9 @@
 
   .td-default main section.main-features-section {
     padding: 0;
-    // Full bleed
-    position: relative;
-    left: 50%;
-    right: 50%;
-    margin-left: -50vw;
-    margin-right: -50vw;
-    width: 100vw;
+    margin-left: calc(var(--bs-gutter-x) * -0.5);
+    margin-right: calc(var(--bs-gutter-x) * -0.5);
+    width: calc(100% + var(--bs-gutter-x));
   }
 
   .main-features {
